I2B2UI-1126 - Admin Tool: Change value field for parameter to a multiline text field - Fixed so that the entire value is visible when editing a multi-line parameter value

--- a/plugins/edu/harvard/catalyst/admin-tool/src/components/EditParameters/EditParameters.scss
+++ b/plugins/edu/harvard/catalyst/admin-tool/src/components/EditParameters/EditParameters.scss
@@ -37,6 +37,9 @@
       outline: none;
       border: none;
     }
+    .MuiOutlinedInput-input {
+      height: auto !important;
+    }
   }
 
   .ParameterValueTextField:focus-visible {
